--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,8 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.2",
-    "node-fetch": "^3.3.0",
-    "nodemon": "^2.0.20"
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "esm": "^3.2.25"
