--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
-    "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.0"
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "esm": "^3.2.25"
